maze.lessons.maze.wallfindfollow.WallFindFollowMaze.scala.error
Escaper:5: error: not found: value random3
      d=random3()
        ^