maze.lessons.maze.wallfindfollow.WallFindFollowMaze.scala.code
override def run() {
  
	var d : Int = 0  
  	while (estSurBiscuit==false) {
      d=random3()
      if (d==0 && estFaceMur==false)
      	avance()
      else if (d==1)
      	droite()
      else if (d==2)
      	gauche()
      
    }
  	prendBiscuit()
}